# rgbd_dense_recostruction

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  funciones.cu  funciones_cuda.cu  funciones_cuda.h  image.cpp  image.cu  includes.h  loadshader.h  main.cpp  main.cu  odometry.cpp  odometry.h  pointcloud.h  program  volumeintegrator.cpp
src/: camera.h  dataset.h  funciones_cuda.cpp  funciones_cuda.cu  funciones_cuda.h  image.cu  image.h  includes.h  loadshader.cpp  loadshader.h  octree.h  odometry.cpp  odometry.cu  odometry.h  pointcloud.h  structures.h  visualoctree.h  volumeintegrator.cpp  volumeintegrator.cu  volumeintegrator.h
